After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690862 - Fix build failures
Fix build failures
Status: RESOLVED FIXED
Product: planner
Classification: Other
Component: General
0.14.x
Other All
: Normal normal
: ---
Assigned To: planner-maint
planner-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-29 18:17 UTC by Gilles Dartiguelongue
Modified: 2013-05-06 09:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0002-Fix-build-failures-with-Werror.patch (1.95 KB, patch)
2012-12-29 18:17 UTC, Gilles Dartiguelongue
committed Details | Review

Description Gilles Dartiguelongue 2012-12-29 18:17:00 UTC
Created attachment 232374 [details] [review]
0002-Fix-build-failures-with-Werror.patch

While preparing patch for eds-3.6 (bug #690334), I had to fix a few build issues.

It's only trivial changes.
Comment 1 Alexandre Franke 2013-03-05 17:28:59 UTC
While I see value in your patch and I'm likely to push it, a more detailed explanation of the encountered build issues would have been appreciated.
Comment 2 Alexandre Franke 2013-03-05 17:34:10 UTC
Review of attachment 232374 [details] [review]:

Besides the commented lines, it seems obvious there were declared but unused (I thought we already fixed those, weird that some remain) or unfreeed variables. Thanks for the fix, I'll push that right away.

::: src/planner-python-plugin.c
@@ +149,3 @@
 	}
 
+	g_free ((gpointer) dirname);

I'd love to know the warning or error that raised.

::: tests/time-test.c
@@ +24,2 @@
 	/* Test mrp_time_new_from_string */
+	CHECK_STRING_RESULT (mrp_time_to_string (t), "20020331T000000Z");

I'll juste move this before the comment as otherwise it doesn't make sense.
Comment 3 Alexandre Franke 2013-03-05 17:47:25 UTC
Pushed to master as 596fb7377ec00189cc1f3707602c6a5cc643a1b7 with minor
corrections as explained above. I'm closing this as fixed but don't hesitate to
comment with the explanation asked in comment 2. :-)
Comment 4 Gilles Dartiguelongue 2013-05-06 09:20:49 UTC
(In reply to comment #2)
> Review of attachment 232374 [details] [review]:
> 
> Besides the commented lines, it seems obvious there were declared but unused (I
> thought we already fixed those, weird that some remain) or unfreeed variables.
> Thanks for the fix, I'll push that right away.
> 
> ::: src/planner-python-plugin.c
> @@ +149,3 @@
>      }
> 
> +    g_free ((gpointer) dirname);
> 
> I'd love to know the warning or error that raised.

It was most likely a message from gcc 4.7 about dirname not being a (void *) (not matching g_free prototype. Each gcc release is more and more picky about warnings and with -Werror lots of small things suddendly make the build fail.

> ::: tests/time-test.c
> @@ +24,2 @@
>      /* Test mrp_time_new_from_string */
> +    CHECK_STRING_RESULT (mrp_time_to_string (t), "20020331T000000Z");
> 
> I'll juste move this before the comment as otherwise it doesn't make sense.

ok

Thanks for reviewing and commiting it.