Fix build failures with -Werror

https://bugzilla.gnome.org/show_bug.cgi?id=690862